comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Curso gratis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>curso 001</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel nemo officia excepturi quae ipsam dignissimos fugiat aperiam velit dolorum asperiores amet, sequi obcaecati earum quod ut soluta dolor sapiente ex.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>curso 002</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit neque, ab laudantium expedita, labore iusto accusantium non amet fugiat dolorem quam tempore aliquam culpa quaerat dolore. Recusandae ipsum consequatur optio.</p>
         </article>
     </main>
 </body>
